# onigiri-api

./: Cargo.toml  README.md  Rocket.toml
src/: handler.rs  main.rs
src/services/: anime.rs  datetime.rs  define.rs  mod.rs  weather.rs
