[package]
name = "onigiri-api"
version = "0.1.0"
edition = "2018"
authors = ["pinosaur"]
description = "central aggregate api"
repository = "https://github.com/KaratsubaLabs/onigiri-api"

[dependencies]
rocket = "0.5.0-rc.2"
chrono = "0.4.19"

reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
